<resources>
    <string name="app_name">IndoorApp</string>
    <string name="check_data_text">Check Model</string>
    <string name="scan_data_text">Start Scanning Data</string>
    <string name="fingerprinting_button_text">Start Fingerprinting</string>
    <string name="next_button_text">Next</string>
    <string name="offline_button_string">Start Offline Phase</string>
    <string name="start_fingerprint_string">Add Fingerprints</string>
    <string name="online_button_string">Start Online Phase</string>
    <string name="subtitle_analysis_text">Data related analysis</string>
    <string name="offline_fingerprint_subtitle_string">Offline Phase (build radio map)</string>
    <string name="online_fingerprint_subtitle_string">Online Phase (find user position)</string>
    <string name="subtitle_fingerprinting_text">Fingerprinting Technique</string>
    <string name="analysis_title">Analysis</string>
    <string name="fingerprint_string_text">Fingerprinting</string>
    <string name="fingerprinting_phase_string">Choose Fingerprinting Phase</string>
    <string name="fingerprinting_howto_string">Fingerprint Scan Process</string>
    <string name="own_sensors_text">Own Sensors</string>
    <string name="accelerometer_sensor_text">Accelerometer Sensor: %s</string>
    <string name="light_sensor_text">Light Sensor: %1$.2f</string>
    <string name="proximity_sensor_text">Proximity Sensor: %1$.2f</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="sensor_movement_text">Device Sensors</string>
    <string name="fingeprints_string">Fingerprints</string>
    <string name="model_text">Model Data</string>
    <string name="gravity_sensor_text">Gravity Sensor: %s</string>
    <string name="gyroscope_sensor_text">Gyroscope Sensor: %s</string>
    <string name="linear_accelaration_text">Liner Acceleration Sensor: %s</string>
    <string name="rotation_sensor_text">Rotation Vector Sensor: %s</string>
    <string name="step_counter_text">Step Counter Sensor: %1$.2f</string>
    <string name="accelerometer_sensor">Accelorometer Sensor</string>
    <string name="accelerometer_x_axis">x: %1$.2f</string>
    <string name="accelerometer_y_axis">y: %1$.2f</string>
    <string name="accelerometer_z_axis">z: %1$.2f</string>
    <string name="gravity_x_axis">x: %1$.2f</string>
    <string name="gravity_y_axis">y: %1$.2f</string>
    <string name="gravity_z_axis">z: %1$.2f</string>
    <string name="bluetooth_sensor">Bluetooth Sensor</string>
    <string name="rssi_reading">RSSI reading</string>
    <string name="rssi_info">%1d dBm</string>
    <string name="wi_fi_sensor">Wi-Fi Sensor</string>
    <string name="long_scan">Long Scan</string>
    <string name="setttings_text">Setttings</string>
    <string name="checkbox_fingerprint">Type of sensors to use</string>
    <string name="radio_algorithm">Type of algorithm to apply</string>
    <string name="radio_filter">Type of filter to apply</string>
    <string name="fingerprint_preferences_string">General Preferences</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="device_data_orientation_rotation_vector">Device Data (Orientation)</string>
    <string name="number_of_fingerprints_location_string">Number of Fingerprints/Location:</string>
    <string name="fingerprinting_time_interval_string">Time Interval (in seconds):</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_offline_fingerprint_phase">OfflineFingerprintPhaseActivity</string>
    <string name="tab_text_1">FINGERPRINTS</string>
    <string name="tab_text_2">RADIO MAP</string>
    <string name="tab_text_3">PREFERENCES</string>
    <string name="tab_text_1_online">POSITION</string>
    <string name="tab_text_1_proximity_distance">SCAN</string>
    <string name="tab_text_2_proximity_distance">PREFERENCES</string>
    <string name="title_activity_offline_phase">OfflinePhaseActivity</string>
    <string name="title_activity_offline_tabed">OfflineTabedActivity</string>
    <string name="selected_sensor_types_string">Selected sensor types: %s</string>
    <string name="general_preferences_string">%s</string>
    <string name="ble">BLE</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="x_coordinate_string">X Coordinate</string>
    <string name="y_coordinate_string">Y Coordinate</string>
    <string name="found_position_string">Found User Position</string>
    <string name="find_user_position_string">Find User Position</string>
    <string name="k_nearest_neighbor_regression">K-Nearest Neighbor Regression</string>
    <string name="k_nearest_neighbor_classifier">K-Nearest Neighbor Classifier</string>
    <string name="mean_filter">Mean Filter</string>
    <string name="none">None</string>
    <string name="median_filter">Median Filter</string>
    <string name="select_zone">Select Zone:</string>
    <string name="selected_zone">Selected Zone: %s</string>
    <string name="load_file">Load File</string>
    <string name="zone">Zone</string>
    <string name="proximity_string">Proximity</string>
    <string name="proximity_technique_string">Proximity Technique</string>
    <string name="proximity_button_string">Start Proximity</string>
    <string name="distance_rssi_scan">Distance/RSSI scan</string>
    <string name="start_distance_scan_string">Start Distance Scan</string>
    <string name="scan_interval">Scan Interval</string>
    <string name="distance_rssi_scan_string">Distance/RSSI Scan</string>
    <string name="start_scan_string">Start Scan</string>
    <string name="start_proximity_technique_string">Start proximity technique</string>
    <string name="trilateration_string">Trilateration</string>
    <string name="trilateration_technique_subtitle">Trilateration Technique</string>
    <string name="start_trilateration_button_string">Start Trilateration</string>
    <string name="trilateration_technique_string">Trilateration Technique</string>
    <string name="trilaterationUISubtitle">Distance/RSSI Scan for at least 3 beacons in range</string>
    <string name="trilaterationUIPage_online_subtitle">Test Online</string>
    <string name="register_string">Register</string>
    <string name="login_string">Login</string>
    <string name="register_user_string">Register User</string>
    <string name="login_user_string">Login User</string>
    <string name="test_information_string">Testing</string>
    <string name="access_test_information_string">Access testing tools</string>
    <string name="tracking_status">Not Tracking</string>
    <string name="notification_title">Background Scanning Service</string>
    <string name="test_string">Test</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_positioning_user">Start Positioning User</string>
    <string name="scan_string">Scan</string>
    <string name="scanning_data_string">Scanning Data…</string>
    <string name="experimental_title_string">Experimental</string>
    <string name="notication_action_disable_active_scanning_service">Disable Active Scanning Service</string>

    <string name="preferences">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="endpoints_header">Endpoints</string>
    <string name="indoor_app_server_endpoint">Indoor App Server Endpoint</string>
    <string name="indoor_app_server_endpoint_default">https://indoorlocationapp.herokuapp.com/</string>
    <string name="auth_server_endpoint">Auth Server Endpoint</string>
    <string name="auth_server_endpoint_default">https://yanux-auth.herokuapp.com/</string>
</resources>
